tests/spec/compile-pass/082_task_group_try_next_streaming.zn
// category: compile-pass
// profile: hosted
// purpose: TaskGroup can stream completed fallible results with tryNext until drained

module tests.pass.taskGroupTryNextStreaming;

async fn loadStreaming(move runtime: Runtime, move jobs: Vector<Job>) -> Result<Unit, FetchError> {
    var group = TaskGroup<Result<Page, FetchError>>.withCapacity(jobs.len(), mut runtime);

    for move job in jobs {
        try mut group.spawn({
            return fetch(move job);
        });
    }

    while (try await mut group.tryNext() is Some(page)) {
        consume(move page);
    }

    return Ok(());
}
