tests/spec/compile-fail/156_task_group_try_next_early_exit.zn
// category: compile-fail
// profile: hosted
// purpose: early exit from a TaskGroup streaming loop must settle remaining tasks

module tests.fail.taskGroupTryNextEarlyExit;

async fn bad(move runtime: Runtime, move jobs: Vector<Job>) -> Result<Unit, FetchError> {
    var group = TaskGroup<Result<Page, FetchError>>.withCapacity(jobs.len(), mut runtime);

    for move job in jobs {
        try mut group.spawn({
            return fetch(move job);
        });
    }

    while val Some(page) = try await mut group.tryNext() {
        if shouldStop(page) {
            return Ok(()); // expected-error: task group may still contain unfinished tasks; call move group.cancelRemaining() before leaving
        }

        consume(move page);
    }

    return Ok(());
}
